--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ nav {
   position: sticky;
   top: 0px;
   overflow: hidden;
-  background: linear-gradient(to bottom right, #748D88, #557570); }
+  background: linear-gradient(to right, #748D88, #557570); }
 
 nav a {
   float: left;
@@ -24,7 +24,7 @@ nav a {
   height: 100%;
   float: right;
   z-index: 2;
-  background-color: #3D615B;
+  background: radial-gradient(circle closest-side, #748D88, #557570);
   color: #254741; }
 
 .nav_links_container {
