--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,15 +10,15 @@ nav {
   position: sticky;
   top: 0px;
   overflow: hidden;
-  background: linear-gradient(to right, #748D88, #557570); }
+  background: linear-gradient(to right, #748D88, #557570, #557570); }
 
 nav a {
   float: left;
   display: block;
   color: #B99B89;
   text-decoration: none;
-  padding: 12px 15px;
-  font-size: 18px; }
+  padding: 1rem 1rem;
+  font-size: 2rem; }
 
 .nav_button_div {
   height: 100%;
@@ -30,19 +30,29 @@ nav a {
 .nav_links_container {
   position: fixed;
   float: left;
-  top: 48px;
+  top: 4.7rem;
   display: flex;
-  flex-direction: column;
-  background-color: #557570; }
-
-.nav_links_container div:nth-child(odd) {
-  background-color: #557570; }
-
-.nav_links_container div:nth-child(even) {
-  background-color: #748D88; }
+  flex-direction: column; }
+  .nav_links_container div:nth-child(odd) {
+    background-color: #557570; }
+  .nav_links_container div:nth-child(even) {
+    background-color: #748D88; }
 
 .link_div a {
+  font-size: 1.8rem;
   padding: 6px 8px; }
+
+.inner_link_div {
+  position: fixed;
+  /*adjust this for outer links to appear right on the border of upper link div*/
+  left: 14.04rem; }
+  .inner_link_div a {
+    font-size: 1.8rem;
+    padding: 6px 6px; }
+
+/*add this style class to clicked link*/
+.active_link {
+  background-color: #c8e2dd; }
 
 /*--------------------------------------------------------------------*/
 .maindiv {
