--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,29 @@
             <a href="#" id="navbutton">☰</a>
         </div>
         <div class="nav_links_container">
-            <div class="link_div"><a href="#">Ajankohtaista</a></div>
+            <div class="link_div"><a href="#" id="ajankohtaista_a">Ajankohtaista</a>
+                <div class="inner_link_div" id="ajankohtaista_div">
+                    <!-- create links here in loop -->
+                    <div class="inner_link"><a>Ostikko 1</a></div>
+                    <div class="inner_link"><a>Ostikko 2</a></div>
+                    <div class="inner_link"><a>Ostikko 3</a></div>
+                    <div class="inner_link"><a>Ostikko 4</a></div>
+                    <div class="inner_link"><a>Ostikko 5</a></div>
+                    <div class="inner_link"><a>Näytä lisää</a></div>
+                </div>
+            </div>
+            <div class="link_div"><a href="#" id="tapahtumat_a">Tapahtumat</a>
+                <!-- create links here in loop -->
+                <div class="inner_link_div" id="tapahtumat_div">
+                    <div class="inner_link"><a>Tapahtuma 1</a></div>
+                    <div class="inner_link"><a>Tapahtuma 2</a></div>
+                    <div class="inner_link"><a>Tapahtuma 3</a></div>
+                    <div class="inner_link"><a>Tapahtuma 4</a></div>
+                    <div class="inner_link"><a>Tapahtuma 5</a></div>
+                    <div class="inner_link"><a>Näytä lisää</a></div>
+                </div>
+            </div>
             <div class="link_div"><a href="#">Kesäteatteri</a></div>
-            <div class="link_div"><a href="#">Tapahtumat</a></div>
             <div class="link_div"><a href="#">Valokuvia</a></div>
             <div class="link_div"><a href="#">Vuokrattavana</a></div>
             <div class="link_div"><a href="#">Kylän yhdistykset</a></div>
