--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,78 +1,13 @@
 $bg-color: #9FAEAB;
-$nav-color: #748D88;
-$nav-color2: #557570;
-$extra-color1: #3D615B;
-$extra-color2: #254741;
-$opposite-color: #FFFFFF;
-$active-link-color: #c8e2dd;
 
 @import 'reset';
+@import 'navigation';
+@import 'form';
 
 body {
   background-color: $bg-color;
 }
 
-/*---------------------------STYLING FOR NAV-------------------------*/
-nav {
-  position: sticky;
-  top: 0px;
-  overflow: hidden;
-  background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
-}
-
-nav a {
-  float: left;
-  display: block;
-  color: $opposite-color;
-  text-decoration: none;
-  padding: 1rem 1rem;
-  font-size: 2rem;
-}
-
-.nav_button_div {
-  height: 100%;
-  float: right;
-  z-index: 2;
-  background: radial-gradient(circle closest-side,$nav-color, $nav-color2);
-  color: $extra-color2;
-}
-
-
-.nav_links_container {
-  position: fixed;
-  float: left;
-  top: 4.7rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.link_div {
-  background-color: $nav-color2;
-
-  a {
-    font-size: 1.8rem;
-    padding: 6px 8px;
-  }
-}
-
-.inner_link_div {
-  position: fixed;
-  /*adjust this for outer links to appear right on the border of upper link div*/
-  left: 14.04rem;
-  background-color: $nav-color;
-
-  a {
-      font-size: 1.8rem;
-      padding: 6px 6px;
-    }
-}
-
-  /*add this style class to clicked link*/
-  .active_link {
-    background-color: $active-link-color;
-  }
-  /*--------------------------------------------------------------------*/
-
-  .maindiv {
+.maindiv {
     margin: auto 2rem;
-  }
+}
