--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -5,7 +5,7 @@
     <h2>Luo käyttäjätunnus</h2>
     <form method="POST" novalidate>
         {% csrf_token %}
-        {{ form.as_p }}
+        {% include 'includes/form.html' %}
         <button type="submit">Luo käyttäjätunnus</button>
     </form>
 {% endblock %}
