--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,19 +13,31 @@ nav a {
   display: block;
   color: #FFFFFF;
   text-decoration: none;
-  padding: 1rem 1rem;
   font-size: 2rem; }
+
+.logo_container {
+  float: left;
+  display: inline;
+  width: 8rem;
+  height: 8rem;
+  margin: 0.6rem 1.8rem; }
+  .logo_container img {
+    max-width: 100%;
+    max-height: 100%; }
 
 .nav_button_div {
   height: 100%;
   float: right;
   z-index: 2;
   background: radial-gradient(circle closest-side, #748D88, #557570);
-  color: #254741; }
+  color: #254741;
+  padding: 2rem 2rem;
+  margin-top: 1rem; }
 
 .nav_links_container {
   position: fixed;
   float: left;
+  /*Adjust this for dropdown menu to appear right below the navbar*/
   top: 4.7rem;
   display: flex;
   flex-direction: column; }
