--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -2,10 +2,14 @@
 
 {% block content %}
 
+    {%  if not user.is_authenticated %}
     <h2>Kirjaudu sisään</h2>
     <form method="POST" novalidate>
         {% csrf_token %}
         {% include 'includes/form.html' %}
-        <button type="submit">Luo käyttäjätunnus</button>
+        <button type="submit">Kirjaudu sisään</button>
     </form>
+    {% else %}
+    <h2>Olet kirjautunut sisään!</h2>
+    {% endif %}
 {% endblock %}
