--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navigation bar--->
     <nav class="navbar">
-        <div class="logo_container"><a href="{% url "home" %}">Venesoski<img src="{% static 'logo.png' %}" alt="logo"></a></div>
+        <div class="logo_container"><a href="{% url "home" %}"><img src="{% static 'logo.png' %}" alt="logo"></a></div>
         <div class="nav_button_div">
             <a href="#" id="navbutton">☰</a>
         </div>
