--- a/templates/includes/form.html
+++ b/templates/includes/form.html
@@ -2,16 +2,15 @@
 
 <div class="field_div">
 
-    {% if form.non_field_errors %}
-        <h3>Käyttäjää ei löydy. Tarkista sähköposti ja salasana</h3>
-    {% endif %}
-
     {% for field in form %}
         {{ field.label_tag }}
         {% if form.is_bound %}
             {% if field.errors %}
               {% render_field field class="invalid_field" %}
               {{ field.errors }}
+            {% elif forloop.last and form.non_field_errors %}
+                {% render_field field class="invalid_field" %}
+                {{ field.errors }}
             {% else %}
                 {% render_field field class="valid_field" %}
             {% endif %}
