--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
-
+{% load widget_tweaks %}
 {% block content %}
 
     {%  if not user.is_authenticated %}
     <h2>Kirjaudu sisään</h2>
     <form method="POST" novalidate>
         {% csrf_token %}
+    <div class="field_div">
+        {% if form.non_field_errors %}
+            <h3>{{ form.non_field_errors }}</h3>
+        {% endif %}
+    </div>
         {% include 'includes/form.html' %}
         <button type="submit">Kirjaudu sisään</button>
     </form>
