--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
             <div class="link_div"><a href="#">Vuokrattavana</a></div>
             <div class="link_div"><a href="#">Kylän yhdistykset</a></div>
             <div class="link_div"><a href="#">Kartta</a></div>
-            <div class="link_div"><a href="#">Kyläläisille</a></div>
+            <div class="link_div"><a href="{% url "log_in" %}">Kyläläisille</a></div>
         </div>
     </nav>
     <!-- main div -->
