--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -12,7 +12,7 @@
         {% endif %}
     </div>
         {% include 'includes/form.html' %}
-        <button type="submit">Kirjaudu sisään</button>
+        <button type="submit" class="form_button">Kirjaudu sisään</button>
     </form>
     {% else %}
     <h2>Olet kirjautunut sisään!</h2>
