--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,6 +6,6 @@
     <form method="POST" novalidate>
         {% csrf_token %}
         {% include 'includes/form.html' %}
-        <button type="submit">Luo käyttäjätunnus</button>
+        <button type="submit" class="form_button">Luo käyttäjätunnus</button>
     </form>
 {% endblock %}
