--- a/static/css/_form.scss
+++ b/static/css/_form.scss
@@ -1,6 +1,8 @@
 $valid_color: #458044;
 $invalid_color: #ff696d;
 $helptext_color: #803526;
+$button-color: #557570;
+$button-border-color: #3D615B;
 
 .field_div {
   display: flex;
@@ -36,5 +38,9 @@ $helptext_color: #803526;
 }
 
 .form_button {
-
+  margin-top: 1rem;
+  background-color: $button-color;
+  border: 2px solid $button-border-color;
+  border-radius: 0.4rem;
+  padding: 0.6rem 1rem;
 }
