--- a/static/css/_navigation.scss
+++ b/static/css/_navigation.scss
@@ -11,6 +11,7 @@ nav {
   position: sticky;
   top: 0px;
   overflow: hidden;
+  display: block;
   background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
 }
 
@@ -27,7 +28,7 @@ nav a {
   display: inline;
   width: 8rem;
   height: 8rem;
-  margin: 0.6rem 1.8rem;
+  margin: 0.2rem 1.8rem 0.1rem  1.8rem;
 
   img {
     max-width: 100%;
@@ -42,15 +43,15 @@ nav a {
   background: radial-gradient(circle closest-side,$nav-color, $nav-color2);
   color: $extra-color2;
   padding: 2rem 2rem;
-  margin-top: 1rem;
+  /* temp solution*/
+  margin-top: 10px;
 }
-
 
 .nav_links_container {
   position: fixed;
   float: left;
-  /*Adjust this for dropdown menu to appear right below the navbar*/
-  top: 4.7rem;
+  /*Adjust this for drop down menu to appear right below the navbar*/
+  top: 8.1rem;
   display: flex;
   flex-direction: column;
 }
@@ -63,6 +64,7 @@ nav a {
     padding: 6px 8px;
   }
 }
+
 
 .inner_link_div {
   position: fixed;
