--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ nav {
   position: sticky;
   top: 0px;
   overflow: hidden;
+  display: block;
   background: linear-gradient(to right, #748D88, #557570, #557570); }
 
 nav a {
@@ -20,7 +21,7 @@ nav a {
   display: inline;
   width: 8rem;
   height: 8rem;
-  margin: 0.6rem 1.8rem; }
+  margin: 0.2rem 1.8rem 0.1rem  1.8rem; }
   .logo_container img {
     max-width: 100%;
     max-height: 100%; }
@@ -32,13 +33,14 @@ nav a {
   background: radial-gradient(circle closest-side, #748D88, #557570);
   color: #254741;
   padding: 2rem 2rem;
-  margin-top: 1rem; }
+  /* temp solution*/
+  margin-top: 10px; }
 
 .nav_links_container {
   position: fixed;
   float: left;
-  /*Adjust this for dropdown menu to appear right below the navbar*/
-  top: 4.7rem;
+  /*Adjust this for drop down menu to appear right below the navbar*/
+  top: 8.1rem;
   display: flex;
   flex-direction: column; }
 
@@ -84,6 +86,13 @@ nav a {
   list-style-type: None;
   font-size: 15px;
   color: #803526; }
+
+.form_button {
+  margin-top: 1rem;
+  background-color: #557570;
+  border: 2px solid #3D615B;
+  border-radius: 0.4rem;
+  padding: 0.6rem 1rem; }
 
 body {
   background-color: #9FAEAB; }
