--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <div class="link_div"><a href="#" id="ajankohtaista_a">Ajankohtaista</a>
                 <div class="inner_link_div" id="ajankohtaista_div">
                     <!-- create links here in loop -->
-                    <div class="inner_link"><a>Ostikko 1</a></div>
+                    <div class="inner_link"><a href="{% url 'ajankohtaista' %}">Ostikko 1</a></div>
                     <div class="inner_link"><a>Ostikko 2</a></div>
                     <div class="inner_link"><a>Ostikko 3</a></div>
                     <div class="inner_link"><a>Ostikko 4</a></div>
