--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ nav a {
   display: block;
   color: #FFFFFF;
   text-decoration: none;
-  font-size: 2rem; }
+  font-size: 2.4rem; }
 
 .logo_container {
   float: left;
@@ -45,7 +45,7 @@ nav a {
   flex-direction: column; }
 
 .link_div {
-  background-color: #557570;}
+  background-color: #557570; }
   .link_div a {
     font-size: 1.8rem;
     padding: 6px 8px; }
@@ -54,7 +54,9 @@ nav a {
   position: fixed;
   /*adjust this for outer links to appear right on the border of upper link div*/
   left: 14.04rem;
-  background-color: #748D88; }
+  background-color: #748D88;
+  display: flex;
+  flex-direction: column; }
   .inner_link_div a {
     font-size: 1.8rem;
     padding: 6px 6px; }
