--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -19,11 +19,7 @@
             <div class="link_div"><a href="#" id="tapahtumat_a">Tapahtumat</a>
                 <!-- create links here in loop -->
                 <div class="inner_link_div" id="tapahtumat_div">
-                    <div class="inner_link"><a>Tapahtuma 1</a></div>
-                    <div class="inner_link"><a>Tapahtuma 2</a></div>
-                    <div class="inner_link"><a>Tapahtuma 3</a></div>
-                    <div class="inner_link"><a>Tapahtuma 4</a></div>
-                    <div class="inner_link"><a>Tapahtuma 5</a></div>
+                    {% show_tapahtuma tapahtuma %}
                     <div class="inner_link"><a>Näytä lisää</a></div>
                 </div>
             </div>
