--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -3,6 +3,7 @@ $bg-color: #9FAEAB;
 @import 'reset';
 @import 'navigation';
 @import 'form';
+@import 'images';
 
 body {
   background-color: $bg-color;
