--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="link_div"><a href="#">Kesäteatteri</a></div>
-            <div class="link_div"><a href="#">Valokuvia</a></div>
+            <div class="link_div"><a href="{% url 'valokuvat' %}">Valokuvia</a></div>
             <div class="link_div"><a href="#">Vuokrattavana</a></div>
             <div class="link_div"><a href="#">Yhdistykset</a></div>
             <div class="link_div"><a href="#">Kartta</a></div>
