--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,6 +96,72 @@ nav a {
   border-radius: 0.4rem;
   padding: 0.6rem 1rem; }
 
+.images_flex_container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin-top: 0.3rem;
+  align-items: center; }
+
+.image_div {
+  display: inline-flex;
+  flex-direction: column;
+  margin: 4rem 25px;
+  background-color: #c3d3d0;
+  border: 0.2rem solid #3d4c49;
+  border-radius: 1rem;
+  overflow: hidden;
+  max-width: 450px;
+  object-fit: contain; }
+  .image_div img {
+    /*prevents image from stretching when using small screen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
+
+.image_div_mouseover {
+  display: flex;
+  flex-direction: column;
+  margin: 4rem 25px;
+  background-color: #c3d3d0;
+  border: 0.2rem solid #3d4c49;
+  box-shadow: 5px 8px 35px #3d4c49;
+  border-radius: 1rem;
+  overflow: hidden;
+  max-width: 450px;
+  object-fit: contain; }
+  .image_div_mouseover img {
+    /*prevents image from stretching when using small screen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
+
+.image_div_margin {
+  /*NOT IN USE*/
+  display: flex;
+  flex-direction: column;
+  margin: 4rem 50px;
+  background-color: #c3d3d0;
+  border: 0.2rem solid #3d4c49;
+  border-radius: 1rem;
+  overflow: hidden;
+  max-width: 450px;
+  object-fit: contain; }
+  .image_div_margin img {
+    /*prevents image from stretching when using small sceen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
+
+.image_header {
+  margin: auto; }
+
 body {
   background-color: #9FAEAB; }
 
