--- a/static/css/_images.scss
+++ b/static/css/_images.scss
@@ -77,3 +77,40 @@ $margin-size: 25px;
 .image_header {
   margin: auto;
 }
+
+/*style for large image div*/
+.large_image_background {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  text-align: center;
+
+}
+
+.large_image_div {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  top: 15%;
+  margin: auto;
+
+  img {
+    max-width: 80%;
+    max-height: 80%;
+    margin: auto;
+    border: 0.2rem solid $image-border-color;
+    border-radius: 1rem;
+  }
+}
+
+.close_image_icon {
+  background-color: whitesmoke;
+  float: right;
+  margin-right: 200px;
+  top: 15px;
+}
