--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,10 +162,44 @@ nav a {
 .image_header {
   margin: auto; }
 
+/*style for large image div*/
+.large_image_background {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  text-align: center; }
+
+.large_image_div {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  top: 15%;
+  margin: auto; }
+  .large_image_div img {
+    max-width: 80%;
+    max-height: 80%;
+    margin: auto;
+    border: 0.2rem solid #3d4c49;
+    border-radius: 1rem; }
+
+.close_image_icon {
+  background-color: whitesmoke;
+  float: right;
+  margin-right: 200px;
+  top: 15px; }
+
 body {
   background-color: #9FAEAB; }
 
-.maindiv {
+.content_div {
   margin: auto 2rem; }
+
+.maindiv {
+  margin: 0; }
 
 /*# sourceMappingURL=style.css.map */
