--- a/templates/ajankohtaista.html
+++ b/templates/ajankohtaista.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+    <div class="content_div">
     <h2>{{ ak.otsikko }}</h2>
     <p>{{ ak.teksti|safe }}</p>
     <h4>{{ ak.pvm }}</h4>
-
+    </div>
 {% endblock %}
