--- a/templates/all_tapahtuma.html
+++ b/templates/all_tapahtuma.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="content_div">
     <h2>Kaikki tapahtumat aikajärjestyksessä</h2>
     {% for tapahtuma in all_tapahtuma %}
         <ul>
@@ -11,4 +12,5 @@
             </li>
         </ul>
     {% endfor %}
+</div>
 {% endblock %}
