--- a/templates/tapahtuma.html
+++ b/templates/tapahtuma.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="content_div">
     <h2>{{ tapahtuma.otsikko }}</h2>
     <p>{{ tapahtuma.teksti|safe }}</p>
     <h4>{{ tapahtuma.pvm }}</h4>
-
+</div>
 {% endblock %}
