new app for kylalaiset & modified some old files

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -28,7 +28,7 @@
             <div class="link_div"><a href="#">Vuokrattavana</a></div>
             <div class="link_div"><a href="#">Yhdistykset</a></div>
             <div class="link_div"><a href="#">Kartta</a></div>
-            <div class="link_div"><a href="{% url "log_in" %}">Kyläläisille</a></div>
+            <div class="link_div"><a href="{% url "kylaindex" %}">Kyläläisille</a></div>
         </div>
     </nav>
 {% endblock %}
