--- a/templates/valokuvat.html
+++ b/templates/valokuvat.html
@@ -13,7 +13,7 @@
     <!-- div for full image, hidden until image chosen -->
     <div class="large_image_background">
         <div class="large_image_div">
-            <span class="close_image_icon">Sulje</span>
+            <!-- <span class="close_image_icon">Sulje</span> -->
             <img src="">
             <h2>otsikko pleisholder</h2>
             <span class="large_kuvaus">kuvaus pleisholder</span>
