--- a/templates/tapahtuma.html
+++ b/templates/tapahtuma.html
@@ -4,5 +4,8 @@
     <h2>{{ tapahtuma.otsikko }}</h2>
     <p>{{ tapahtuma.teksti|safe }}</p>
     <h4>{{ tapahtuma.pvm }}</h4>
+    {% for os in osallistujat %}
+    <span>{{os.osallistuja.first_name}}</span></br>
+    {% endfor %}
 </div>
 {% endblock %}
