--- a/templates/kylalaisetindex.html
+++ b/templates/kylalaisetindex.html
@@ -4,7 +4,7 @@
     <a href=""><h2>Keskustelualue</h2></a>
 </div>
 <div class="kylalink_div">
-    <a href=""><h2>Markkinapaikka</h2></a>
+    <a href="{% url 'markkina' %}"><h2>Markkinapaikka</h2></a>
 </div>
  <div class="kylalink_div">
      <a href="{% url 'kayttaja' %}"><h2>Oma profiili</h2></a>
