--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -4,6 +4,7 @@ $bg-color: #9FAEAB;
 @import 'navigation';
 @import 'form';
 @import 'images';
+@import 'market';
 
 body {
   background-color: $bg-color;
