--- a/templates/all_tapahtuma.html
+++ b/templates/all_tapahtuma.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="content_div">
-    <h2>Kaikki tapahtumat aikajärjestyksessä</h2>
+    <h2>{{ otsikko }}</h2>
     {% for tapahtuma in all_tapahtuma %}
         <ul>
            <li><span style="font-weight: bold">
