--- a/templates/markkina.html
+++ b/templates/markkina.html
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="market_big_div">
         <h3>{{ ilmoitus.otsikko }}</h3>
+        {% if ilmoitus.ilmoittaja == request.user %}<a href="">poista ilmoitus</a>{% endif %}
         <span>{{ ilmoitus.ilmoitustyyppi }}</span>
         <span>{{ ilmoitus.pvm }}</span>
         <img src="{{ ilmoitus.kuva.url }}" id="{{ ilmoitus.pk }}">
