--- a/templates/valokuvat.html
+++ b/templates/valokuvat.html
@@ -9,6 +9,15 @@
             <span class="image_header">{{ valokuva.otsikko }}</span>
         </div>
     {% endfor %}
+    <div class="paginator_container">
+        {%  if valokuvat.has_previous %}
+            <a href="?sivu={{ valokuvat.previous_page_number }}">Edellinen sivu</a>
+        {% endif %}
+        <span class="current_page">{{ valokuvat.number }} / {{ valokuvat.paginator.num_pages }}</span>
+        {%  if valokuvat.has_next %}
+            <a href="?sivu={{ valokuvat.next_page_number }}">Seuraava sivu</a>
+        {% endif %}
+    </div>
     </div>
     <!-- div for full image, hidden until image chosen -->
     <div class="large_image_background">
