--- a/templates/profiili.html
+++ b/templates/profiili.html
@@ -4,7 +4,7 @@
     <h2>{{user.first_name}} {{user.last_name}}</h2>
     <a href="{% url 'omat_tapahtumat' %}" class="button_link">Ilmottaudutut tapahtumat</a>
     <a href="{% url 'omat_ilmoitukset' %}" class="button_link">Omat kauppailmoitukset</a>
-    <a href="" class="button_link">Muuta tietoja</a>
+    <a href="{% url 'edit_user' %}" class="button_link">Muuta tietoja</a>
     <a href="{% url 'log_out' %}" class="button_link">Kirjaudu ulos</a>
 </div>
 
