--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -26,7 +26,7 @@
             <div class="link_div"><a href="{% url 'kesateatteri' %}">Kesäteatteri</a></div>
             <div class="link_div"><a href="{% url 'valokuvat' %}">Valokuvia</a></div>
             <div class="link_div"><a href="{% url 'vuokrattavana' %}">Vuokrattavana</a></div>
-            <div class="link_div"><a href="#">Yhdistykset</a></div>
+            <div class="link_div"><a href="{% url 'yhdistykset' %}">Yhdistykset</a></div>
             <div class="link_div"><a href="#">Kartta</a></div>
             <div class="link_div"><a href="{% url "kylaindex" %}">Kyläläisille</a></div>
         </div>
