--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -5,6 +5,7 @@ $bg-color: #9FAEAB;
 @import 'form';
 @import 'images';
 @import 'market';
+@import 'tinymce';
 
 body {
   background-color: $bg-color;
