--- a/templates/tapahtuma.html
+++ b/templates/tapahtuma.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="content_div">
     <h2>{{ tapahtuma.otsikko }}</h2>
-    <p>{{ tapahtuma.teksti|safe }}</p>
+    <div class="tinymce_div">{{ tapahtuma.teksti|safe }}</div>
     <h4>{{ tapahtuma.pvm }}</h4>
     <!--- check if user is authenticated and is (s)he attending the event --->
     <input type="hidden" id="tapahtuma_hidden" value="{{ tapahtuma.pk }}">
