--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -13,6 +13,7 @@
         {% include 'includes/form.html' %}
         <button type="submit" class="form_button">Kirjaudu sisään</button>
     </form>
+    <a href="{% url 'sign_up' %}">Rekisteröidy</a>
     {% else %}
     <h2>Olet kirjautunut sisään!</h2>
     {% endif %}
