--- a/templates/all_markkina.html
+++ b/templates/all_markkina.html
@@ -2,6 +2,7 @@
 {%  load fb_versions %}
 
 {% block content %}
+     <h2><a href="{% url 'uusi_markkina' %}">Uusi ilmoitus</a></h2>
     <div class="images_flex_container">
     {% for ilmo in kaikki_ilmoitukset %}
         <a href="{% url 'markkina' ilmoitus_pk=ilmo.pk %}">
