--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -16,5 +16,6 @@
     {% else %}
     <h2>Olet kirjautunut sisään!</h2>
     {% endif %}
+    <h2><a href="{% url 'sign_up' %}">Rekisteröidy</a></h2>
 </div>
 {% endblock %}
