--- a/static/css/_images.scss
+++ b/static/css/_images.scss
@@ -1,6 +1,7 @@
 $image-div-color: #c3d3d0;
 $image-border-color: #3d4c49;
 $margin-size: 25px;
+
 .images_flex_container {
   display: flex;
   flex-flow: row wrap;
@@ -12,7 +13,7 @@ $margin-size: 25px;
 .image_div {
   display: inline-flex;
   flex-direction: column;
-  margin: 4rem $margin-size;
+  margin: $margin-size;
   background-color: $image-div-color;
   border: 0.2rem solid $image-border-color;
   border-radius: 1rem;
@@ -33,7 +34,7 @@ $margin-size: 25px;
 .image_div_mouseover {
   display: flex;
   flex-direction: column;
-  margin: 4rem $margin-size;
+  margin: $margin-size;
   background-color: $image-div-color;
   border: 0.2rem solid $image-border-color;
   box-shadow: 5px 8px 35px #3d4c49;
@@ -50,6 +51,17 @@ $margin-size: 25px;
       width: auto;
       object-fit: contain;
     }
+}
+
+.paginator_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 40px;
+  margin: auto;
+  margin-bottom: $margin-size;
+  border: 1px solid black;
 }
 
 .image_div_margin {
