--- a/static/css/_navigation.scss
+++ b/static/css/_navigation.scss
@@ -6,81 +6,159 @@ $opposite-color: #FFFFFF;
 $active-link-color: #c8e2dd;
 
 
-
-nav {
-  position: sticky;
-  top: 0px;
-  overflow: hidden;
-  display: block;
-  background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
-}
-
-nav a {
-  float: left;
-  display: block;
-  color: $opposite-color;
-  text-decoration: none;
-  font-size: 2.4rem;
-}
-
-.logo_container {
-  float: left;
-  display: inline;
-  width: 8rem;
-  height: 8rem;
-  margin: 0.2rem 1.8rem 0.1rem  1.8rem;
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
+/*desktop*/
+@media screen and (min-width: 1080px) {
+  nav {
+    margin: auto;
+    margin-top: 5rem;
+    margin-bottom: 0.8rem;
+    top: 50rem;
+    width: 80%;
+    display: block;
+    background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
+    border-radius: 10px 10px 10px 10px;
+    /*ISO EHKÄ */
+    max-width: 1450px;
+    box-shadow:  0px 5px 50px 15px #7c8b88;
   }
-}
 
-.nav_button_div {
-  height: 100%;
-  float: right;
-  z-index: 2;
-  background: radial-gradient(circle closest-side,$nav-color, $nav-color2);
-  color: $extra-color2;
-  padding: 2rem 2rem;
-  /* temp solution*/
-  margin-top: 10px;
-}
-
-.nav_links_container {
-  position: fixed;
-  float: left;
-  /*Adjust this for drop down menu to appear right below the navbar*/
-  top: 8.1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.link_div {
-  background-color: $nav-color2;
-
-  a {
-    font-size: 1.8rem;
-    padding: 6px 8px;
+  .logo_container {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    img {
+      max-width: 30rem;
+      max-height: 8rem;
+    }
   }
-}
+
+  .nav_button_div {
+    display: none;
+  }
+
+  .nav_links_container {
+    margin: auto;
+    margin-top: 20px;
+    top: 8.1rem;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1200px;
+
+  }
+
+  .link_div {
+
+    a {
+      font-size: 1.3rem;
+      color: whitesmoke;
+      text-decoration: none;
+      padding: 5px;
+    }
+  }
 
 
-.inner_link_div {
-  position: fixed;
-  /*adjust this for outer links to appear right on the border of upper link div*/
-  left: 11.55rem;
-  background-color: $nav-color;
-  display: flex;
-  flex-direction: column;
+  .inner_link_div {
+    position: absolute;
+    background-color: $nav-color;
+    display: flex;
+    flex-direction: column;
 
-  a {
-      font-size: 1.8rem;
+    a {
+      font-size: 1.25rem;
+      color: white;
       padding: 6px 6px;
     }
-}
+  }
 
   /*add this style class to clicked link*/
-.active_link {
+  .active_link {
     background-color: $active-link-color;
+  }
+
+}
+
+
+
+
+
+/*mobile*/
+@media screen and (max-width:1080px) {
+  nav {
+    position: sticky;
+    top: 0px;
+    overflow: hidden;
+    display: block;
+    background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
+  }
+
+  nav a {
+    float: left;
+    display: block;
+    color: $opposite-color;
+    text-decoration: none;
+    font-size: 2.4rem;
+  }
+
+  .logo_container {
+    float: left;
+    display: inline;
+    width: 8rem;
+    height: 8rem;
+    margin: 0.2rem 1.8rem 0.1rem 1.8rem;
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+
+  .nav_button_div {
+    height: 100%;
+    float: right;
+    z-index: 2;
+    background: radial-gradient(circle closest-side, $nav-color, $nav-color2);
+    color: $extra-color2;
+    padding: 2rem 2rem;
+    /* temp solution*/
+    margin-top: 10px;
+  }
+
+  .nav_links_container {
+    position: fixed;
+    float: left;
+    /*Adjust this for drop down menu to appear right below the navbar*/
+    top: 8.1rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .link_div {
+    background-color: $nav-color2;
+
+    a {
+      font-size: 1.35rem;
+      padding: 6px 8px;
+    }
+  }
+
+  .inner_link_div {
+    position: fixed;
+    /*adjust this for outer links to appear right on the border of upper link div*/
+    left: 9rem;
+    background-color: $nav-color;
+    display: flex;
+    flex-direction: column;
+
+    a {
+      font-size: 1.25rem;
+      padding: 6px 6px;
+    }
+  }
+
+  /*add this style class to clicked link*/
+  .active_link {
+    background-color: $active-link-color;
+  }
 }
