--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,4 +1,5 @@
 $bg-color: #9FAEAB;
+$content-bg-color: #7c8b88;
 
 @import 'reset';
 @import 'navigation';
@@ -15,7 +16,7 @@ body {
   margin: auto 2rem;
 
   img {
-    max-width: 80vw;
+    max-width: 95%;
     object-fit: contain;
   }
 }
@@ -23,4 +24,23 @@ body {
 .maindiv {
     //margin: auto 2rem;
     margin: 0;
+}
+
+@media screen and (min-width: 1080px) {
+
+  .maindiv {
+    margin: auto;
+    display: block;
+  }
+
+  .content_div {
+    margin: auto;
+    width: calc(80% - 10px);
+    background-color: $content-bg-color;
+    padding: 0 5px 5px 5px;
+    border-radius: 10px 10px 10px 10px;
+    /*ISO EHKÄ */
+    max-width: 1450px;
+  }
+
 }
