--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -7,6 +7,7 @@ $content-bg-color: #7c8b88;
 @import 'images';
 @import 'market';
 @import 'tinymce';
+@import 'map';
 
 body {
   background-color: $bg-color;
