--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -27,7 +27,7 @@
             <div class="link_div"><a href="{% url 'valokuvat' %}">Valokuvia</a></div>
             <div class="link_div"><a href="{% url 'vuokrattavana' %}">Vuokrattavana</a></div>
             <div class="link_div"><a href="{% url 'yhdistykset' %}">Yhdistykset</a></div>
-            <div class="link_div"><a href="#">Kartta</a></div>
+            <div class="link_div"><a href="{%  url 'kartta' %}">Kartta</a></div>
             <div class="link_div"><a href="{% url "kylaindex" %}">Kyläläisille</a></div>
         </div>
     </nav>
