--- a/templates/tapahtuma.html
+++ b/templates/tapahtuma.html
@@ -5,14 +5,16 @@
     <div class="tinymce_div">{{ tapahtuma.teksti|safe }}</div>
     <h4>{{ tapahtuma.pvm }}</h4>
     <!--- check if user is authenticated and is (s)he attending the event --->
-    <input type="hidden" id="tapahtuma_hidden" value="{{ tapahtuma.pk }}">
-    {% if user_attending %}
-        <a href="{% url 'tapahtuma_peru' tapahtuma_pk=tapahtuma.pk%}"><span>Peru osallistumine</span></a></br>
-    {% elif user.is_authenticated %}
-        <a href="{% url 'tapahtuma_osallistu' tapahtuma_pk=tapahtuma.pk%}"><span>Osallistu</span></a></br>
+    {% if user.is_authenticated %}
+        <input type="hidden" id="tapahtuma_hidden" value="{{ tapahtuma.pk }}">
+        {% if user_attending %}
+            <a href="{% url 'tapahtuma_peru' tapahtuma_pk=tapahtuma.pk%}"><span>Peru osallistumine</span></a></br>
+        {% elif user.is_authenticated %}
+            <a href="{% url 'tapahtuma_osallistu' tapahtuma_pk=tapahtuma.pk%}"><span>Osallistu</span></a></br>
+        {% endif %}
+        {% for os in osallistujat %}
+        <span>{{os.osallistuja.first_name}}</span></br>
+        {% endfor %}
     {% endif %}
-    {% for os in osallistujat %}
-    <span>{{os.osallistuja.first_name}}</span></br>
-    {% endfor %}
 </div>
 {% endblock %}
