--- a/static/css/_navigation.scss
+++ b/static/css/_navigation.scss
@@ -26,10 +26,10 @@ $active-link-color: #c8e2dd;
     margin: auto;
     display: flex;
     justify-content: center;
-    img {
+    /*img {
       max-width: 30rem;
       max-height: 8rem;
-    }
+    }*/
   }
 
   .nav_button_div {
