--- a/templates/valokuvat.html
+++ b/templates/valokuvat.html
@@ -23,9 +23,13 @@
     <div class="large_image_background">
         <div class="large_image_div">
             <!-- <span class="close_image_icon">Sulje</span> -->
-            <img src="">
-            <h2>otsikko pleisholder</h2>
-            <span class="large_kuvaus">kuvaus pleisholder</span>
+            <div class="large_img_imgcontainer">
+                <img src="">
+            </div>
+            <div class="large_image_texbox">
+                <h2>otsikko pleisholder</h2>
+                <span class="large_kuvaus">kuvaus pleisholder</span>
+            </div>
         </div>
     </div>
 {% endblock %}
