--- a/static/css/_images.scss
+++ b/static/css/_images.scss
@@ -6,8 +6,14 @@ $margin-size: 25px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  margin: auto;
   margin-top: 0.3rem;
   align-items: center;
+  width: calc(80% - 10px);
+  background-color: $content-bg-color;
+  padding: 0 5px 5px 5px;
+  max-width: 1450px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .image_div {
@@ -99,27 +105,46 @@ $margin-size: 25px;
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
   text-align: center;
-
+  padding: 0;
+  margin: 0;
 }
 
 .large_image_div {
   position: relative;
   width: 100%;
   height: 100%;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   text-align: center;
-  top: 15%;
+  top: 2%;
+  margin: 0;
+  padding: 0;
+
+}
+
+.large_img_imgcontainer {
+  position: relative;
+  display: inline-block;
+  object-fit: contain;
   margin: auto;
 
   img {
-    max-width: 80%;
-    max-height: 80%;
-    margin: auto;
-    border: 0.2rem solid $image-border-color;
-    border-radius: 1rem;
+     object-fit: contain;
+     max-width: 80vw;
+     max-height: 80vh;
+     border: 0.2rem solid $image-border-color;
+     border-radius: 1rem;
+    margin: 0;
+    padding: 0;
+    }
   }
-}
 
+.large_image_texbox {
+  background-color: $content-bg-color;
+  padding: 0;
+  margin: auto;
+}
 .close_image_icon {
   background-color: whitesmoke;
   float: right;
