--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -4,7 +4,12 @@
 
 {% block content %}
 <nav class="navbar">
-        <div class="logo_container"><a href="{% url "home" %}"><img src="{% static 'logo.png' %}" alt="logo"></a></div>
+        <div class="logo_container">
+            <a href="{% url "home" %}"><picture>
+                <source media="(min-width: 1080px" srcset="{% static 'silta2.jpg'%}">
+                <img src="{% static 'logo.png' %}" alt="logo">
+            </picture></a>
+        </div>
         <div class="nav_button_div">
             <a href="#" id="navbutton">☰</a>
         </div>
@@ -27,7 +32,7 @@
             <div class="link_div"><a href="{% url 'valokuvat' %}">Valokuvia</a></div>
             <div class="link_div"><a href="{% url 'vuokrattavana' %}">Vuokrattavana</a></div>
             <div class="link_div"><a href="{% url 'yhdistykset' %}">Yhdistykset</a></div>
-            <div class="link_div"><a href="{%  url 'kartta' %}">Kartta</a></div>
+            <div class="link_div"><a href="{% url 'kartta' %}">Kartta</a></div>
             <div class="link_div"><a href="{% url "kylaindex" %}">Kyläläisille</a></div>
         </div>
     </nav>
