--- a/static/css/_images.scss
+++ b/static/css/_images.scss
@@ -116,8 +116,9 @@ $margin-size: 25px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  flex-flow: column nowrap;
   text-align: center;
-  top: 2%;
+  top: 0%;
   margin: 0;
   padding: 0;
 
@@ -128,6 +129,8 @@ $margin-size: 25px;
   display: inline-block;
   object-fit: contain;
   margin: auto;
+  margin-bottom: 0;
+  padding: 0;
 
   img {
      object-fit: contain;
