--- a/static/css/_navigation.scss
+++ b/static/css/_navigation.scss
@@ -14,16 +14,20 @@ $active-link-color: #c8e2dd;
     margin-bottom: 0.8rem;
     top: 50rem;
     width: 80%;
+    height: 20rem;
     display: block;
-    background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
+    //background: linear-gradient(to right, $nav-color, $nav-color2, $nav-color2);
+    background-image: url("silta2.jpg");
+    background-size: cover;
     border-radius: 10px 10px 10px 10px;
     /*ISO EHKÄ */
-    max-width: 1450px;
+    max-width: 1300px;
     box-shadow:  0px 5px 50px 15px #7c8b88;
   }
 
   .logo_container {
     margin: auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     /*img {
@@ -38,13 +42,14 @@ $active-link-color: #c8e2dd;
 
   .nav_links_container {
     margin: auto;
-    margin-top: 20px;
-    top: 8.1rem;
+    margin-top: 17.9rem;
+    background-color: rgba(179,154,139, 0.55);
+    top: 8rem;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1300px;
 
   }
 
@@ -52,7 +57,8 @@ $active-link-color: #c8e2dd;
 
     a {
       font-size: 1.3rem;
-      color: whitesmoke;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: #284004;
       text-decoration: none;
       padding: 5px;
     }
