--- a/static/css/_images.scss
+++ b/static/css/_images.scss
@@ -12,7 +12,8 @@ $margin-size: 25px;
   width: calc(80% - 10px);
   background-color: $content-bg-color;
   padding: 0 5px 5px 5px;
-  max-width: 1450px;
+  min-width: 944px;
+  max-width: 1300px;
   border-radius: 10px 10px 10px 10px;
 }
 
@@ -104,7 +105,6 @@ $margin-size: 25px;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
-  text-align: center;
   padding: 0;
   margin: 0;
 }
@@ -115,12 +115,8 @@ $margin-size: 25px;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  flex-flow: column nowrap;
+  justify-content: center;
   text-align: center;
-  top: 0%;
-  margin: 0;
-  padding: 0;
 
 }
 
@@ -131,6 +127,7 @@ $margin-size: 25px;
   margin: auto;
   margin-bottom: 0;
   padding: 0;
+  top: 3%;
 
   img {
      object-fit: contain;
@@ -144,9 +141,13 @@ $margin-size: 25px;
   }
 
 .large_image_texbox {
+  max-width: 80vw;
   background-color: $content-bg-color;
+  border: 0.2rem solid $image-border-color;
+  border-radius: 1rem;
   padding: 0;
   margin: auto;
+  margin-top: 15px;
 }
 .close_image_icon {
   background-color: whitesmoke;
