--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,4 +1,4 @@
-$bg-color: #9FAEAB;
+$bg-color: #79a235;
 $content-bg-color: #7c8b88;
 
 @import 'reset';
@@ -27,6 +27,7 @@ body {
     margin: 0;
 }
 
+/*desktop*/
 @media screen and (min-width: 1080px) {
 
   .maindiv {
@@ -41,6 +42,7 @@ body {
     padding: 0 5px 5px 5px;
     border-radius: 10px 10px 10px 10px;
     /*ISO EHKÄ */
+    min-width: 944px;
     max-width: 1300px;
   }
 
