--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,12 +11,15 @@ html, body, ul, ol {
     margin-bottom: 0.8rem;
     top: 50rem;
     width: 80%;
-    height: 20rem;
+    height: 32rem;
     display: block;
-    background-image: url("silta2.jpg");
+    background-image: url("siltabanner.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     border-radius: 10px 10px 10px 10px;
     /*ISO EHK├ä */
+    min-width: 950px;
     max-width: 1300px;
     box-shadow: 0px 5px 50px 15px #7c8b88; }
 
@@ -24,20 +27,19 @@ html, body, ul, ol {
     margin: auto;
     width: 100%;
     display: flex;
-    justify-content: center;
-    /*img {
+    justify-content: center; }
+    .logo_container img {
+      display: none;
       max-width: 30rem;
-      max-height: 8rem;
-    }*/ }
+      max-height: 8rem; }
 
   .nav_button_div {
     display: none; }
 
   .nav_links_container {
     margin: auto;
-    margin-top: 17.9rem;
+    margin-top: 28rem;
     background-color: rgba(179, 154, 139, 0.55);
-    top: 8rem;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -45,9 +47,9 @@ html, body, ul, ol {
     max-width: 1300px; }
 
   .link_div a {
-    font-size: 1.3rem;
+    font-size: 1.35rem;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #284004;
+    color: #e1dad3;
     text-decoration: none;
     padding: 5px; }
 
@@ -64,7 +66,7 @@ html, body, ul, ol {
   /*add this style class to clicked link*/
   .active_link {
     background-color: #c8e2dd; } }
-/*mobile*/
+/*-------------------------------mobile----------------------------------------*/
 @media screen and (max-width: 1080px) {
   nav {
     position: sticky;
@@ -169,7 +171,8 @@ html, body, ul, ol {
   width: calc(80% - 10px);
   background-color: #7c8b88;
   padding: 0 5px 5px 5px;
-  max-width: 1450px;
+  min-width: 944px;
+  max-width: 1300px;
   border-radius: 10px 10px 10px 10px; }
 
 .image_div {
@@ -249,7 +252,6 @@ html, body, ul, ol {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
-  text-align: center;
   padding: 0;
   margin: 0; }
 
@@ -259,12 +261,8 @@ html, body, ul, ol {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  flex-flow: column nowrap;
-  text-align: center;
-  top: 0%;
-  margin: 0;
-  padding: 0; }
+  justify-content: center;
+  text-align: center; }
 
 .large_img_imgcontainer {
   position: relative;
@@ -272,7 +270,8 @@ html, body, ul, ol {
   object-fit: contain;
   margin: auto;
   margin-bottom: 0;
-  padding: 0; }
+  padding: 0;
+  top: 3%; }
   .large_img_imgcontainer img {
     object-fit: contain;
     max-width: 80vw;
@@ -283,9 +282,13 @@ html, body, ul, ol {
     padding: 0; }
 
 .large_image_texbox {
+  max-width: 80vw;
   background-color: #7c8b88;
+  border: 0.2rem solid #3d4c49;
+  border-radius: 1rem;
   padding: 0;
-  margin: auto; }
+  margin: auto;
+  margin-top: 15px; }
 
 .close_image_icon {
   background-color: whitesmoke;
@@ -326,7 +329,7 @@ html, body, ul, ol {
   height: 1000px; }
 
 body {
-  background-color: #9FAEAB; }
+  background-color: #79a235; }
 
 .content_div {
   margin: auto 2rem; }
@@ -337,6 +340,7 @@ body {
 .maindiv {
   margin: 0; }
 
+/*desktop*/
 @media screen and (min-width: 1080px) {
   .maindiv {
     margin: auto;
@@ -349,6 +353,7 @@ body {
     padding: 0 5px 5px 5px;
     border-radius: 10px 10px 10px 10px;
     /*ISO EHK├ä */
+    min-width: 944px;
     max-width: 1300px; } }
 
 /*# sourceMappingURL=style.css.map */
